# abattoir

./: .gitignore  LICENSE  abattoir.cabal  cabal.sandbox.config
src/: Combinators.hs  Commands.hs  Lambda.hs  LambdaWithSynonyms.hs  Main.hs  Parse.hs  Synonyms.hs
test/: CommandsSpec.hs  LambdaSpec.hs  LambdaWithSynonymsSpec.hs  Main.hs  ParseSpec.hs  SynonymsSpec.hs
